--- a/package.json
+++ b/package.json
@@ -53,15 +53,21 @@
     "@ant-design/icons": "^4.0.0",
     "@ant-design/pro-layout": "^5.0.8",
     "@ant-design/pro-table": "^2.2.0",
+    "@antv/data-set": "^0.11.0",
+    "@types/lodash.debounce": "^4.0.6",
     "antd": "^4.0.0",
     "bizcharts": "^3.5.3-beta.0",
+    "bizcharts-plugin-slider": "^2.1.1-beta.1",
     "classnames": "^2.2.6",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.22.2",
+    "numeral": "^2.0.6",
     "omit.js": "^1.0.2",
     "prop-types": "^15.5.10",
     "qs": "^6.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-fittext": "^1.0.0",
     "umi": "^3.1.0",
     "umi-request": "^1.0.8",
     "use-merge-value": "^1.0.1"
