--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@ant-design/pro-table": "^2.2.0",
     "@antv/data-set": "^0.11.0",
     "@types/lodash.debounce": "^4.0.6",
+    "ant-design-pro": "^2.3.2",
     "antd": "^4.0.0",
     "bizcharts": "^3.5.3-beta.0",
     "bizcharts-plugin-slider": "^2.1.1-beta.1",
